port changes from https://github.com/AnthonyMichaelTDM/arco-leftwm to this repo

--- a/archiso/airootfs/etc/sddm.conf
+++ b/archiso/airootfs/etc/sddm.conf
@@ -4,6 +4,8 @@ Namespaces=
 Numlock=on
 
 [Theme]
+Current=BloodMoon-sugar-candy
+CursorTheme=Bibata-Modern-Ice
 DisableAvatarsThreshold=7
 EnableAvatars=true
 FacesDir=/usr/share/sddm/faces
