Treat genesis repo as an official repo

--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -104,8 +104,12 @@ Include = /etc/pacman.d/mirrorlist
 SigLevel = Required DatabaseOptional
 Include = /etc/pacman.d/chaotic-mirrorlist
 
+[genesis-repo]
+SigLevel = Optional TrustAll
+Server = https://raw.githubusercontent.com/AnthonyMichaelTDM/$repo/main/$arch
+
 [arcolinux_repo_iso]
-SigLevel = PackageRequired DatabaseNever
+SigLevel = Never
 Include = /etc/pacman.d/arcolinux-mirrorlist
 
 #####################################################
