--- a/archiso/airootfs/etc/pacman.conf
+++ b/archiso/airootfs/etc/pacman.conf
@@ -100,6 +100,10 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
+[genesis-repo]
+SigLevel = Optional TrustedOnly
+Server = https://raw.githubusercontent.com/AnthonyMichaelTDM/$repo/main/$arch
+
 [chaotic-aur]
 SigLevel = Required DatabaseOptional
 Include = /etc/pacman.d/chaotic-mirrorlist
