remove dependency on ArcoLinux repos for building the ISO

--- a/archiso/airootfs/etc/pacman.conf
+++ b/archiso/airootfs/etc/pacman.conf
@@ -101,7 +101,7 @@ Include = /etc/pacman.d/mirrorlist
 #Server = file:///home/custompkgs
 
 [genesis-repo]
-SigLevel = Optional TrustedOnly
+SigLevel = Optional TrustAll
 Server = https://raw.githubusercontent.com/AnthonyMichaelTDM/$repo/main/$arch
 
 [chaotic-aur]
