--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -108,18 +108,18 @@ Include = /etc/pacman.d/chaotic-mirrorlist
 SigLevel = Optional TrustAll
 Server = https://raw.githubusercontent.com/AnthonyMichaelTDM/$repo/main/$arch
 
-[arcolinux_repo_iso]
-SigLevel = Never
-Include = /etc/pacman.d/arcolinux-mirrorlist
+# [arcolinux_repo_iso]
+# SigLevel = Never
+# Include = /etc/pacman.d/arcolinux-mirrorlist
 
 #####################################################
 # Remove these last lines once they produce errors
 #####################################################
 
-[arcolinux_repo]
-SigLevel = Never
-Include = /etc/pacman.d/arcolinux-mirrorlist
+# [arcolinux_repo]
+# SigLevel = Never
+# Include = /etc/pacman.d/arcolinux-mirrorlist
 
-[arcolinux_repo_3party]
-SigLevel = Never
-Include = /etc/pacman.d/arcolinux-mirrorlist
+# [arcolinux_repo_3party]
+# SigLevel = Never
+# Include = /etc/pacman.d/arcolinux-mirrorlist
