Finish chopping out arcolinux repos

--- a/archiso/airootfs/etc/pacman.conf
+++ b/archiso/airootfs/etc/pacman.conf
@@ -112,10 +112,10 @@ Include = /etc/pacman.d/chaotic-mirrorlist
 # Remove these last lines once they produce errors
 #####################################################
 
-[arcolinux_repo]
-SigLevel = Never
-Include = /etc/pacman.d/arcolinux-mirrorlist
+# [arcolinux_repo]
+# SigLevel = Never
+# Include = /etc/pacman.d/arcolinux-mirrorlist
 
-[arcolinux_repo_3party]
-SigLevel = Never
-Include = /etc/pacman.d/arcolinux-mirrorlist
+# [arcolinux_repo_3party]
+# SigLevel = Never
+# Include = /etc/pacman.d/arcolinux-mirrorlist
